[#41] [FEATURE] 반찬의 이미지 URL을 이미지 엔티티로 분리 (#45)
* feat: 반찬 생성, 수정 삭제 api 이미지 추가

* feat: 반찬 조회 api 이미지 추가

* refactor: 반찬 이미지 관련 코드 리팩토링

* feat: 반찬 품절여부 enum, 수량 추가

* remove: 도시락 생성 시 반찬 품절여부 검증 제거

* chore: spotless 적용